--- a/_data/media.yml
+++ b/_data/media.yml
@@ -1,3 +1,7 @@
+- name: Estadão
+  title: "Sem home office, periferia se expõe mais ao coronavírus no transporte público"
+  url: https://sao-paulo.estadao.com.br/noticias/geral,sem-home-office-periferia-se-expoe-mais-ao-coronavirus-no-transporte-publico,70003607614
+  date: 2021-02-06
 - name: G1 Globo
   title: Estudo mostra que 66% de mortos por Covid-19 na Grande SP ganhavam menos de 3 salários mínimos
   url: https://g1.globo.com/sp/sao-paulo/noticia/2020/06/16/estudo-mostra-que-66percent-de-mortos-por-covid-19-na-grande-sp-ganhavam-menos-de-3-salarios-minimos.ghtml
